Enable preview features in build